<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".StartPage"
    tools:showIn="@layout/activity_start_page">

    <Spinner
        android:id="@+id/feet_spinner"
        android:layout_width="89dp"
        android:layout_height="45dp"
        android:layout_marginBottom="16dp"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toTopOf="@+id/inch_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Spinner
        android:id="@+id/inch_spinner"
        android:layout_width="89dp"
        android:layout_height="45dp"
        android:layout_marginBottom="268dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/enter_height_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_height"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/feet_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.884" />

    <TextView
        android:id="@+id/ft_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/feet_text"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/inch_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.092"
        app:layout_constraintStart_toEndOf="@+id/feet_spinner" />

    <TextView
        android:id="@+id/in_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:text="@string/inch_text"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/inch_spinner"
        app:layout_constraintTop_toBottomOf="@+id/feet_spinner"
        app:layout_constraintVertical_bias="0.003" />

    <Button
        android:id="@+id/enter_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inch_spinner"
        app:layout_constraintVertical_bias="0.363" />
</androidx.constraintlayout.widget.ConstraintLayout>