...
    <string name="prev_Walk">Previous Walk</string>
    <string name="title_activity_route_screen">RouteScreen</string>

    <string name="enter_height">Please enter your height:</string>
    <string name="feet_text">feet</string>
    <string name="inch_text">inches</string>
    <string name="enter_btn">ENTER</string>

    <string name="route_title">Route Title:</string>
    <string name="starting_location">Starting Location:</string>
    <string name="stop_location">Stop Location:</string>
    <string name="total_time">Total Time:</string>
    <string name="default_time">00:00:00</string>
...
